--- a/README.Rmd
+++ b/README.Rmd
@@ -28,6 +28,7 @@ knitr::opts_chunk$set(
 library(unikn)  # load package
 ```
 
+
 # unikn  <img src = "./inst/pix/unikn.png" align = "right" alt = "unikn::" width = "150px" />
 
 <!-- unikn pkg logo and link: --> 
@@ -56,13 +57,14 @@ While this renders the correct use of default specifications simple and straight
 
 <!-- Overview: --> 
 
-The package currently provides four types of objects or functions:
+The **unikn** package currently provides five types of objects and functions: 
 
 1. Dedicated colors and color palettes;  
-2. Functions for viewing, changing, and comparing color palettes (e.g., see the `seecol()` and `usecol()` functions);  
-3. Functions for plotting graphical objects (e.g., boxes and frames);  
-4. Functions for plotting styled text elements (e.g., highlighting and underlining text).  
-<!-- 5. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
+2. Functions for viewing, changing, and comparing color palettes (i.e., `seecol()` and `usecol()`);  
+3. Functions for creating new color palettes and for finding colors by their names (i.e., `newpal()` and `grepal()`);  
+4. Functions for plotting graphical objects (e.g., boxes and frames);  
+5. Functions for plotting styled text elements (e.g., highlighting and underlining text).  
+<!-- 6. Graphical support (e.g., commands and themes for creating scientific visualizations). -->
 
 Additional elements may be added as they become available. Please use responsibly! 
 
@@ -84,7 +86,8 @@ devtools::install_github('hneth/unikn')
 library('unikn')  # loads the package
 ```
 
-## Colors
+
+## Colors and color functions
 
 A distinctive and recognizable color scheme is the most recognizable element of the [University of Konstanz](https://www.uni-konstanz.de/)'s corporate design. 
 
@@ -94,14 +97,14 @@ Basic color palettes are specified according to the **Corporate Design Manual** 
 
 The default color palette `pal_unikn` combines:  
 
-- 5 shades of `pal_seeblau` (reversed, i.e., from darker to lighter);  
+- 5\ shades of `pal_seeblau` (reversed, i.e., from darker to lighter);  
 - the base R color `"white"` (as the center color);  
-- 4 shades of grey (`pal_grau[1:4]`);  
+- 4\ shades of grey (`pal_grau[1:4]`);  
 - the base R color `"black"` (as the last color).   
 
-This yields a diverging, symmetrical default color palette `pal_unikn` consisting of 11&nbsp;colors: 
+This yields a diverging, symmetrical default color palette `pal_unikn` consisting of 11\ colors: 
 
-```{r pal_unikn, eval = TRUE, fig.width = 8, fig.asp = .75, fig.align = 'center'}
+```{r pal_unikn, eval = TRUE, fig.width = 7, fig.asp = .75, fig.align = 'center'}
 # Default color palette: ----- 
 # pal_unikn  # 11 default colors
 
@@ -111,17 +114,17 @@ seecol(pal_unikn)
 
 <!-- <img src = "./inst/pix/README-pal_unikn-1.png" align = "center" alt = "pal_unikn" style = "border:10;"/> -->
 
-- A shorter version consisting of 10 colors is provided as `pal_unikn_web`. 
+- A shorter version consisting of 10\ colors is provided as `pal_unikn_web`. 
 
-- An alternative color palette with 10 more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
+- An alternative color palette with 10\ more muted colors (intended for PowerPoint presentations) is provided as `pal_unikn_ppt`. 
 
-Evaluating `seecol(pal = "unikn_basic")` shows these 3 basic unikn color palettes. 
+Evaluating `seecol(pal = "unikn_basic")` shows these three basic unikn color palettes. 
 
 ### All color palettes
 
-Beyond the 3 variants of `pal_unikn`, the **unikn** package provides the following color palettes: 
+Beyond the three variants of `pal_unikn`, the **unikn** package provides the following color palettes: 
 
-```{r pal_all, eval = TRUE, fig.align = 'center', fig.width = 6, fig.height = 5}
+```{r pal_all, eval = TRUE, fig.align = 'center', fig.width = 5, fig.height = 5}
 seecol("all")
 ```
 
@@ -177,25 +180,29 @@ seecol(pal_unikn_pair)   # palette of 16 paired colors (in 8 pairs)
 More flexible and complex color palettes can be created by using the `seecol()` and `usecol()` functions. 
 
 
-## Color-related functions
+### Overview of color-related functions
 
-The `seecol()` and `usecol()` functions provide a convenient interface for _viewing_ and _using_ color palettes. 
+Two main functions `seecol()` and `usecol()` provide a convenient interface for _viewing_ and _using_ color palettes. 
 
-### Plotting color palettes
+Two additional functions `newpal()` and `grepal()` serve in auxiliary roles (by allowing to create new color palettes and finding colors whose names match some pattern). 
 
-The `seecol()` function provides a quick overview over the contents of a color palette and allows comparisons between color palettes: 
 
-```{r seecol-pref, eval = TRUE, fig.align = 'center', fig.width = 7, fig.height = 5.5}
+### Viewing color palettes with `seecol()` 
+
+The `seecol()` function enables a quick inspection of a color palette. 
+It provides a quick overview over the details of a color palette and allows comparisons between multiple color palettes: 
+
+```{r seecol-pref, eval = TRUE, fig.align = 'center', fig.width = 6, fig.asp=.9}
 # Plot a color palette: ----- 
 seecol(pal = pal_unikn_pref,            # palette to plot
        col_brd = "white", lwd_brd = 5)  # color and width of borders
 ```
 
-### Partial color palettes
+#### Partial color palettes
 
 When only a subset of a color palette are needed, the `seecol()` and `usecol()` functions provide a reasonable subset of a known **unikn** color palette: 
 
-```{r pal-n, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r pal-n, eval = TRUE, fig.width = 5, fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # All color palettes: ----- 
 seecol(n = 4)
 
@@ -203,18 +210,18 @@ seecol(n = 4)
 # seecol(pal_seeblau, n = 4)
 ```
 
-### Changing and creating color palettes
+#### Changing and creating color palettes
 
 The `usecol` and `seecol` functions provide some generic options for manipulating and showing color gradients based on given colors or color palettes. This serves 2 main functions: 
 
-1. Reducing or extending existing color palettes (to arbitrary lengths).  
+1. Reducing or extending existing color palettes (to arbitrary lengths). 
 2. Mixing and merging colors and color palettes into new color palettes. 
 
 Here are some examples of these functions in action: 
 
 - Extending or reducing an existing color palette:
 
-```{r col-scale-1, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-1, eval = TRUE, fig.width = 6, fig.asp = .75, fig.align = 'center', collapse = TRUE}
 seecol(pal_unikn, n = 21)  
 # seecol(pal_seeblau, n = 8)  # provides a subset of "good" colors
 ```
@@ -235,37 +242,42 @@ seecol(c(Seeblau, "white", Pinky), 11)
 
 - Mixing and merging colors and color palettes into new color palettes: 
 
-```{r col-scale-3, eval = TRUE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-3, eval = TRUE, fig.width = 6, fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Combining color palettes (and colors): ----- 
 seecol(c(rev(pal_petrol),  "white", pal_bordeaux), 11,
        col_bg = "grey90")
 ```
 
-```{r col-scale-3-b, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
+```{r col-scale-3-b, eval = FALSE, fig.width = 6, fig.asp = .75, fig.align = 'center', collapse = TRUE}
 # Related combinations:
 seecol(c(rev(pal_seeblau), "white", pal_pinky), 11)
 seecol(c(rev(pal_seeblau), "white", pal_seegruen), 11)
 seecol(c(rev(pal_seeblau), "white", pal_peach), 11)
 ```
 
-## Using color palettes
+
+### Using color palettes with `usecol()` 
 
 The **unikn** package exports the color palettes shown by `seecol(pal = "all")` and 
-the 9&nbsp;preferred colors of `pal_unikn_pref` (e.g., `Seeblau`, `Seegruen`, etc.) as named colors. 
+the nine preferred colors of `pal_unikn_pref` (e.g., `Seeblau`, `Seegruen`, etc.) as named colors. 
 
 The `usecol()` function provides convenient access and additional options for using them in graphs. 
 Here are some examples:  
 
-1. Using **unikn** color palettes and functions in base R plots: 
+1. Using **unikn** color palettes and functions in **base** R plots: 
 
 By default, simply set the color argument of a plot to `usecol()` with some **unikn** color palette: 
 
-```{r usepal-demo-barplot-1, eval = TRUE, out.width = "60%", fig.asp = .65, fig.align = 'center', collapse = TRUE}
+```{r usepal-demo-barplot-1, eval = TRUE, fig.width = 5, fig.asp = .65, fig.align = 'center', collapse = TRUE}
 # (a) Using a color palette:
 barplot(1/sqrt(1:11),  col = usecol(pal_unikn))
 ```
 
-Providing an additional value for `n` would reduce or extend the selected color palette and adding an opacity value for `alpha` (in the range `[0, 1]`) would regulate transparency. 
+Two additional arguments allow modifying the existing color palette: 
+
+- providing a value for\ `n` reduces or extends the selected color palette; 
+
+- adding an opacity value for `alpha` (in the range `[0, 1]`) regulates color transparency. 
 
 <!-- 
 Additionally providing a value for `n` either reduces or extends the selected color palette: 
@@ -287,7 +299,7 @@ plot(x = runif(99), y = runif(99), "p", pch = 16, cex = 6,
 
 -->
 
-2. Visualizing **unikn** color palettes with `image`: 
+2. Visualizing **unikn** color palettes (using `image()` from **graphics**):  
 
 ```{r use-pal-demo-image, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
 # Random images:
@@ -311,40 +323,39 @@ image(z = cos(r^2) * exp(-r/6), col = usecol(c(pal_petrol, pal_seegruen), n = 10
       main = "Shades of Petrol/Seegruen", axes = FALSE)
 ```
 
-3. Using **unikn** in `ggplot` calls (using **ggplot2**):
+3. Using **unikn** in `ggplot()` commands (using **ggplot2**): 
 
-```{r use-pal-ggplot2, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
-# Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/ 
-
-# (1) Create data: ---- 
-ngroup <- 50
-names <- paste("G_", seq(1, ngroup), sep = "")
+```{r use-pal-ggplot2, eval = FALSE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+# 0. Create data: ---- 
+# Example based on https://www.r-graph-gallery.com/137-spring-shapes-data-art/
+n <- 50
+names <- paste("G_", seq(1, n), sep = "")
 df <- data.frame()
 
 set.seed(3)
 for(i in seq(1:30)){
-    data = data.frame(matrix(0, ngroup, 3))
-    data[, 1] = i
-    data[, 2] = sample(names, nrow(data))
-    data[, 3] = prop.table(sample( c(rep(0, 100), c(1:ngroup)), nrow(data)))
+    data = data.frame(matrix(0, n, 3))
+    data[, 1] <- i
+    data[, 2] <- sample(names, nrow(data))
+    data[, 3] <- prop.table(sample( c(rep(0, 100), c(1:n)), nrow(data)))
     df = rbind(df, data)}
 colnames(df) <- c("X","group","Y")
 df <- df[order(df$X, df$group) , ]
 
-# (1) Choose colors: ---- 
+# 1. Choose colors: ---- 
 
 # (a) using RColorBrewer: 
 library(RColorBrewer)
 cur_col <- brewer.pal(11, "Paired") 
-cur_col <- colorRampPalette(cur_col)(ngroup)
+cur_col <- colorRampPalette(cur_col)(n)
 cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
 
 # (b) using unikn:
 library(unikn)
-cur_col <- usecol(pal = pal_unikn, n = ngroup)
+cur_col <- usecol(pal = pal_unikn, n = n)
 # cur_col <- cur_col[sample(c(1:length(cur_col)), size = length(cur_col))]  # randomize
 
-# (3) Use ggplot2: ---- 
+# 2. Plotting: ---- 
 library(ggplot2)
 ggplot(df, aes(x = X, y = Y, fill = group)) + 
   geom_area(alpha = 1, color = Grau, size = .01 ) +
@@ -354,75 +365,21 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
   theme(legend.position = "none")
 ```
 
-<img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" width = "500px" alt = "Using pal_unikn in ggplot" style = "border:10;"/>
+<img src = "./inst/pix/README-use_pal_ggplot2-1.png" align = "center" width = "450px" alt = "Using pal_unikn in ggplot" style = "border:10;"/>
 
-## Generalization to other institutions 
 
-The color scales included in the **unikn** package are based on the CD manual of the [University of Konstanz](https://www.uni-konstanz.de/), Germany. 
-However, the functionality provided by the package makes it easy and straightforward to define and use your own color schemes. 
-Here are some examples from other institutions to illustrate how this can be achieved.  
+### Creating color palettes with `newpal()`
 
-```{r uni-Cardiff, echo = FALSE, eval = FALSE, fig.align = 'center', fig.width = 5, fig.height = 3}
-# Cardiff University, UK: 
-# ToDo. 
-```
+The `newpal()` function allows creating new color palettes (typically as data frames with dedicated color names). 
 
-#### A. [University of Freiburg](https://www.uni-freiburg.de/), Germany: 
-<img src = "./inst/pix/logo_freiburg.png" align = "right" width = "150px" alt = "Uni Freiburg" style = "border:10;"/> 
+The color palettes included in the **unikn** package are based on the CD\ manual of the [University of Konstanz](https://www.uni-konstanz.de/), Germany. However, the functionality provided by the package makes it easy and straightforward to define and use your own color scales. 
+In the following, we provide examples to illustrate how this can be achieved for other corporations or institutions. 
 
-The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de/) provides fairly extensive information on its corporate color scheme (available [here](https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt) and [here](https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben)). 
-Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
-As the [University of Freiburg](https://www.uni-freiburg.de/) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
+#### The colors of Princeton University 
 
-```{r uni-freiburg-cols, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
-# Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
-
-pal_freiburg_bluered <- c("#004a99", "#c1002a")
-names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
-
-pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
-names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
-
-# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben  
-
-pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
-names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
-
-pal_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
-                       "#b2b4b3", "#9a9b9c", "#747678", "#363534")
-names(pal_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
-                              "grey-5", "grey-7", "grey-9", "grey-font")
-
-# Info colors: 
-pal_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
-                       "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47")
-names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
-                              "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
-```
-
-Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
-
-```{r uni-freiburg-newpal}
-pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
-                                    "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47"),
-                            names = c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
-                                      "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
-                            )
-# seecol(pal_freiburg_info)
-```
-
-Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
-
-```{r uni-freiburg-seecol, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-seecol(pal_freiburg_info)            # view color palette
-# seecol(pal_freiburg_basic, n = 7)  # extend color palette
-# seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
-```
-
-#### B. [Princeton University](https://princeton.edu/), USA: 
 <img src = "./inst/pix/logo_princeton.jpg" align = "right" width = "200px" alt = "Princeton University" style = "border:10;"/>
 
-The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158&nbsp;C. 
+The color scheme of [Princeton University](https://princeton.edu/) is easily recognized by its combination of orange with black and white elements. The official guidelines (available [here](https://communications.princeton.edu/guides-tools/logo-graphic-identity)) define "Princeton Orange" as Pantone (PMS) 158\ C. 
 
 - The PANTONE&trade; color finder at <https://www.pantone.com/color-finder/158-C> yields the following color values:
 
@@ -430,12 +387,12 @@ The color scheme of [Princeton University](https://princeton.edu/) is easily rec
     - HEX/HTML: `#E87722`  
     - CMYK: `0 62 95 0`  
 
-- However, the guide also specifies and distinguishes between 2 additional versions of orange and provides the following HEX/HTML values for them:  
+- However, the guide also specifies and distinguishes between two additional versions of orange and provides the following HEX/HTML values for them:  
 
     - Orange on white: "#E77500"  
     - Orange on black: "#F58025"  
 
-These definitions suggest defining 3 separate versions of orange and corresponding color palettes: 
+These definitions suggest defining three separate versions of orange and corresponding color palettes: 
 
 ```{r uni-princeton-cols, out.width = "67%", fig.asp = .75, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # HEX values for 3 shades of orange: 
@@ -465,12 +422,12 @@ pal_princeton_1 <- newpal(col = c("#E77500", "white", "black"),
 
 The new color palettes (e.g., `pal_princeton_1`) can now be viewed with `seecol()`, scaled by `usecol()`, and used in graphs (e.g., in `ggplot` commands):
 
-```{r uni-princeton-ggplot, eval = FALSE, out.width = "60%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
+```{r uni-princeton-ggplot, eval = FALSE, out.width = "55%", fig.asp = .618, fig.align = 'center', collapse = TRUE}
 # View color palette: 
 # seecol(pal_princeton_1)  
 
-# Scale color palette (using df and ngroup from above):
-my_pal <- usecol(pal = pal_princeton_1, n = ngroup)
+# Scale color palette (using df and n from above):
+my_pal <- usecol(pal = pal_princeton_1, n = n)
 
 # Use my_pal for plotting: 
 ggplot(df, aes(x = X, y = Y, fill = group)) + 
@@ -481,89 +438,83 @@ ggplot(df, aes(x = X, y = Y, fill = group)) +
   theme(legend.position = "none")
 ```
 
-<img src = "./inst/pix/README-use_ggplot2_princeton-1.png" align = "center" width = "500px" alt = "pal_unikn" style = "border:10;"/>
+<img src = "./inst/pix/README-use_ggplot2_princeton-1.png" align = "center" width = "450px" alt = "pal_unikn" style = "border:10;"/>
 
-#### C. [Max Planck Society](https://www.mpg.de/de), Germany: 
-<img src = "./inst/pix/logo_MPG.png" align = "right" alt = "MPG" width = "200px" style = "border:10;"/>
 
-The CD manual (available [here](https://docplayer.org/2328711-Max-planck-institut-das-erscheinungsbild-der-max-planck-gesellschaft-4-ueberarbeitete-auflage.html)) of the [Max Planck Society](https://www.mpg.de/de) specifies the use of 2&nbsp;primary colors: 
+#### The colors of Google 
 
-- Green as Pantone 328: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/328-C> yields the following color values:
+Color palettes for other entities and purposes can easily be created. 
+To illustrate the steps involved, let's create a color palette of the well-known [Google](https://www.google.com/) logo. 
 
-    - RGB: `0 115 103`    
-    - HEX/HTML: `#007367`   
-    - CMYK: `100 10 61 38`  
+The typical steps of creating a new palette are: 
 
-- Grey as Pantone 427: Using the PANTONE&trade; color finder at <https://www.pantone.com/color-finder/427-C> yields the following color values: 
+1. Choose some colors (and their R color names, or as RGB/HEX/HCL values, e.g., from sites like <https://www.schemecolor.com>). 
 
-    - RGB: `208 211 212`  
-    - HEX/HTML: `#D0D3D4`   
-    - CMYK: `7 3 5 8`   
+2. Define the colors as an\ R vector (of type character). 
 
-```{r mpg-rgb-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-# Using RGB values: 
-pal_mpg <- data.frame(# named colors: 
-  "mpg_green" = rgb( 17, 102,  86, maxColorValue = 255),
-  "mpg_gray"  = rgb(221, 222, 214, maxColorValue = 255),
-  "mpg_grey"  = rgb(208, 211, 212, maxColorValue = 255)
-  )
-seecol(pal = list(pal_mpg))  # Ooops...
+3. Define their names as a second R vector (of type character). 
+
+4. Use the `newpal()` command to define the new color palette. 
+
+5. Use the `seepal()` command to inspect the new color palette. 
+
+
+```{r newpal-google, fig.width = 5, fig.asp = .9, fig.align = 'center'}
+# 1. Choose colors:
+# Google logo colors (from <https://www.schemecolor.com/google-logo-colors.php>)
+
+# 2. Define colors (as vector):
+color_google <- c("#4285f4", "#34a853", "#fbbc05", "#ea4335")
+
+# 3. Define color names (as vector):
+names_google <- c("blueberry", "sea green", "selective yellow", "cinnabar")
+
+# 4. Define color palette:
+pal_google <- newpal(color_google, names_google)
+
+# 5. Inspect color palette:
+seecol(pal_google, 
+       col_brd = "white", lwd_brd = 8,
+       title = "Colors of the Google logo")
 ```
 
-```{r MPG-hex-cols, echo = FALSE, eval = FALSE, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-# Using HEX values:
-mpg_green <- "#007367"
-mpg_grey  <- "#D0D3D4"
+The new palette `pal_google` can now be used in R graphics and modified in various ways (e.g., by the `usecol()` function). 
 
-# col2rgb(mpg_green)
-# col2rgb(mpg_grey)
+See the vignette on "Institutional colors" of the **unikn** package for additional examples. 
 
-pal_mpg <- usecol(pal = c(mpg_green, "white", mpg_grey))
+
+
+### Finding colors with `grepal()`
+
+The `grepal()` function allows finding colors in a color palettes by matching their name to a pattern.
+
+Specifically, `grepal(pattern, x)` searches a color palette\ `x` (i.e., a vector of color names or data frame of named colors) for elements that match a `pattern` and returns those elements (colors) that match the pattern. The `pattern` can be a regular expression. 
+
+By default, `grepal()` searches the `r length(colors())`\ named colors provided by `colors()` in **base**\ R: 
+
+```{r grepal-example-1, fig.width=5, fig.asp=.9, fig.align = 'center'}
+# Find colors matching a pattern: 
+oranges <- grepal("orange")
+
+# See color palette:
+seecol(oranges, title = "Shades of 'orange' in colors()")
 ```
 
-Again, the easiest way of defining a corresponding color palette is by creating a named vector. 
-To allow for better color gradients, we insert the color `"white"` between the 2&nbsp;dedicated colors: 
+Providing a list of color palettes to the `pal` argument of the `seecol()` function allows comparing multiple color palettes: 
 
-```{r mpg-pal-def, out.width = "67%", fig.asp = .75, fig.align = 'center', collapse = TRUE}
-pal_mpg <- c("#007367", "white", "#D0D3D4")
-names(pal_mpg) <- c("mpg green", "white", "mpg grey")
+```{r grepal-example-2, fig.width=5, fig.asp=.50, fig.align = 'center'}
+# Find colors:
+pink_olive <- grepal("(pink)|(olive)")
+purple_orange <- grepal("(purple)|(orange)")
+
+# See color palettes:
+seecol(pal = list(pink_olive, purple_orange), 
+       pal_names = c("pink|olive", "purple|orange"), 
+       title = "Comparing pink olives and purple oranges")
 ```
 
-Alternatively, we can define both (colors and names) in 1 step by using the `newpal()` function:
+To make `grepal()` more powerful, its `pattern`\ argument can use regular expressions, and its `x`\ argument works with both vectors and data frames (e.g., the **unikn** color palettes). 
 
-```{r mpg-newpal-def}
-pal_mpg <- newpal(col = c("#007367", "white", "#D0D3D4"),
-                  names = c("mpg green", "white", "mpg grey")
-                  )
-# seecol(pal_mpg)
-```
-
-As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
-
-```{r mpg-use-pal, eval = TRUE, fig.width = 3.5, fig.height = 4, fig.show = 'hold', fig.align = 'center'}
-# View color palette: 
-# seecol(pal_mpg)
-
-# Use pal_mpg in image:
-x <- y <- seq(-4 * pi, 4 * pi, len = 15)
-r <- sqrt(outer(x^2, y^2, "+"))
-image(z = cos(r^2) * exp(-r/6), col = usecol(pal_mpg, n = 10), 
-      main = "Shades of MPG (using pal_mpg)", axes = FALSE)
-```
-
-#### Comparing color palettes 
-
-Once a new palette is defined (and available in your current R environment), the `seecol()` and `usecol()` functions allow comparing, scaling, and using them in the same fashion as the native **unikn** color palettes: 
-
-```{r compare-custom-pals, out.width = "75%", fig.asp = .50, fig.align = 'center', collapse = TRUE}
-# Compare and extend custom color palettes:
-pals <- list(pal_freiburg_basic, pal_mpg, pal_princeton_1, pal_unikn)
-lbls <- c("Uni Freiburg", "Max Planck", "Princeton Uni", "Uni Konstanz")
-# seecol(pals, pal_names = lbls,                          # basic versions
-#        title = "Compare and label custom color palettes") 
-seecol(pals, n = 9, pal_names = lbls,                     # scaled versions
-       title = "Compare and label custom color palettes")   
-```
 
 ## Text decorations
 
@@ -626,12 +577,52 @@ my_url <- url_unikn("https://www.uni-konstanz.de/")  # input URL as copied from 
 post(labels = my_url, x = .2, y = .1, font = 4, new_plot = "xbox")
 ```
 
-## Other institutions 
+### Using custom color palettes 
 
-If custom color palettes are available (see definitions above), the text decoration functions can be used for graphical annotations in the style of other institutions: 
+<!-- Uni Freiburg: -->
 
-```{r others-txt-demo, echo = TRUE, eval = TRUE, fig.align = 'center', fig.width = 5, fig.height = 3.5}
-# (A) Using pal_freiburg_basic and pal_freiburg_blue: 
+```{r freiburg-cols, echo = FALSE}
+# Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
+
+pal_freiburg_bluered <- c("#004a99", "#c1002a")
+names(pal_freiburg_bluered) <- c("uni-blau", "uni-rot")
+
+pal_freiburg_basic <- c("#004a99", "white", "#c1002a")  # add "white" for better gradients
+names(pal_freiburg_basic) <- c("uni-blau", "weiss", "uni-rot")
+
+# Web colors: https://www.zuv.uni-freiburg.de/service/wsg/webstyleguide/farben  
+
+pal_freiburg_blue <- c("#004a99", "#2a6ebb", "#6f9ad3")
+names(pal_freiburg_blue) <- c("blue-1", "blue-2", "blue-3")
+
+pal_freiburg_grey <- c("#f2f3f1", "#e0e1dd", "#d5d6d2", "#c9cac8", 
+                       "#b2b4b3", "#9a9b9c", "#747678", "#363534")
+names(pal_freiburg_grey) <- c("grey-0", "grey-1", "grey-2", "grey-3", 
+                              "grey-5", "grey-7", "grey-9", "grey-font")
+
+pal_freiburg_info <- c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", "#739600", "#92d400", 
+                       "#4d4f53", "#747678", "#b2b4b3", "#d5d6d2", "#e98300", "#efbd47")
+names(pal_freiburg_info) <- c("mid-blau", "hell-blau", "dark-red", "hell-red", "mid-green", "hell-green", 
+                              "anthrazit", "dark-grey", "mid-grey", "hell-grey", "orange", "gelb")
+```
+
+<!-- MPG:  -->
+
+```{r mpg-cols, echo = FALSE}
+# Define vectors:
+col_mpg <- c("#007367", "white", "#D0D3D4")     # color definition 
+col_lbl <- c("mpg green", "white", "mpg grey")  # color names
+
+# Create new color palette:
+pal_mpg <- newpal(col = col_mpg, names = col_lbl)
+```
+
+If custom color palettes are available, the text decoration functions can be used for graphical annotations. 
+
+- For instance, using color palettes of other academic institutions (defined in the vignette on "Institutional colors"): 
+
+```{r others-txt-demo, echo = FALSE, eval = TRUE, fig.align = 'center', fig.width = 4.5, fig.height = 3}
+# A. Using pal_freiburg_basic and pal_freiburg_blue: 
 uline(labels = c("University of Freiburg"), 
       x = .5, y = .85, font = 2, cex = 1, 
       col = pal_freiburg_basic[[1]], col_bg = pal_freiburg_basic[[3]], 
@@ -640,19 +631,36 @@ mark(labels = c("Die Wahrheit", "wird euch", "frei machen."),
      x = 0, y = .90, y_layout = 0, cex = 1.2, 
      col = c("white"), col_bg = rev(usecol(pal_freiburg_blue, 3)))
 
-# (B) Using orange_white or pal_princeton:
+# B. Using orange_white or pal_princeton:
 uline(labels = c("Princeton University"), 
       x = .5, y = .55, font = 2, cex = 1, col_bg = orange_white)
 mark(labels = c("Go", "tigers!"), 
      x = 0, y = .58, y_layout = 0, cex = 1.2,  
      col = c("black", "white"), col_bg = pal_princeton)
 
-# (C) Using pal_mpg:
+# C. Using pal_mpg:
 uline(labels = c("Max Planck Society"), 
       x = .5, y = .25, font = 2, cex = 1, col_bg = usecol(pal_mpg, 1), col = "black")
 mark(labels = c("Dem Anwenden", "muss das Erkennen", "vorausgehen."), 
      x = 0, y = .30, y_layout = 0, cex = 1.2, 
      col = c("white"), col_bg = usecol(pal_mpg, 7)[3:1])
+```
+
+- Using the color palette `pal_google` (defined above): 
+
+```{r others-google, echo = FALSE, fig.align = 'center', fig.width = 3, fig.height = 2.5}
+# D. Google
+# seecol(pal_google)  # defined above
+
+slide(col = pal_google[1], border = NA)
+
+uline(labels = c("Google"), 
+      x = .6, y = .5, font = 2, cex = 1.5, 
+      col = "white", col_bg = pal_google[3])
+
+mark(labels = c("Don't", "be", "evil."), 
+     x = 0, y = .75, y_layout = 0, cex = 3,
+     col = "white", col_bg = usecol(pal_google[c(2:4)]))
 ```
 
 
