--- a/vignettes/color_inst.Rmd
+++ b/vignettes/color_inst.Rmd
@@ -69,7 +69,7 @@ The [Albert-Ludwigs Universität Freiburg](https://www.uni-freiburg.de) provides
 Colors can be defined in a variety of ways, but R comes with convenient tools (like `col2rgb` and `convertColor` in **grDevices**) to handle most cases. The most straightforward way of creating a new color palette in R is by using its HEX/HTML code (provided in character format). 
 As the [University of Freiburg](https://www.uni-freiburg.de) kindly provides their colors in this format, we can easily define the corresponding color palettes as named vectors: 
 
-```{r freiburg-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r freiburg-cols, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # Basic colors: https://www.zuv.uni-freiburg.de/service/cd/cd-manual/farbwelt
 
 pal_freiburg_bluered <- c("#004a99", "#c1002a")
@@ -106,7 +106,7 @@ pal_freiburg_info <- newpal(col = c("#2a6ebb", "#a7c1e3", "#7b2927", "#de3831", 
 
 Once a new color palette has been defined (and is available in your current R environment), we can use the `seecol()` and `usecol()` functions to view, modify, and use the palette: 
 
-```{r freiburg-seecol, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
+```{r freiburg-seecol, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
 seecol(pal_freiburg_info)            # view color palette
 # seecol(pal_freiburg_basic, n = 7)  # extend color palette
 # seecol(c(pal_freiburg_blue, "white", pal_freiburg_grey))  # mix color palette
@@ -130,7 +130,7 @@ The color scheme of [Princeton University](https://princeton.edu/) is easily rec
 
 These definitions suggest defining three separate versions of orange and corresponding color palettes: 
 
-```{r princeton-cols, fig.width = 5, fig.asp = .8, fig.align = 'center', fig.show = "hold", collapse = TRUE}
+```{r princeton-cols, fig.width = 5, fig.asp = .80, fig.align = 'center', fig.show = "hold", collapse = TRUE}
 # HEX values for 3 shades of orange: 
 orange_basic <- "#E87722"  # Pantone 158 C
 orange_white <- "#E77500"  # orange on white
@@ -204,18 +204,18 @@ pal_mpg <- c("#007367", "white", "#D0D3D4")
 names(pal_mpg) <- c("mpg green", "white", "mpg grey")
 ```
 
-```{r mpg-pal-def-df, fig.width = 5, fig.asp = .8, fig.align = 'center', collapse = TRUE}
+```{r mpg-pal-def-df, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
 # Define vectors:
 col_mpg <- c("#007367", "white", "#D0D3D4")     # color definition 
 col_lbl <- c("mpg green", "white", "mpg grey")  # color names
 
 # Create new color palette:
-pal_mpg <- newpal(col = pal_mpg, names = col_lbl)
+pal_mpg <- newpal(col = col_mpg, names = col_lbl)
 ```
 
 As before, can now use the `seecol()` and `usecol()` functions to view, modify, and use the new `pal_mpg` color palette: 
 
-```{r mpg-seecol, fig.width = 5, fig.asp = .9, fig.align = 'center', collapse = TRUE}
+```{r mpg-seecol, fig.width = 5, fig.asp = .80, fig.align = 'center', collapse = TRUE}
 seecol(pal_mpg,
        col_brd = "black", lwd_brd = 1, 
        title = "Colors of the Max Planck Society")
